test_suite/tests/ui/pass/option_type.rs
use clapi::macros::*;

#[command]
#[option(number)]
fn test(number: u32){}

fn main(){}