test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_version.rs
use clapi::macros::*;

#[command(version=true)]
fn app(){}

fn main(){}